--- a/learn.ipynb
+++ b/learn.ipynb
@@ -17,27 +17,28 @@
     "\n",
     "train_config = TrainConfig(\n",
     "    num_workers=5,\n",
-    "    batch_size=4,\n",
+    "    batch_size=16,\n",
     "    data_queue_size=512,\n",
-    "    num_levels=7,\n",
+    "    num_levels=8,\n",
     "    learning_rate=0.0001,\n",
     ")\n",
     "replay_config = ReplayConfig(\n",
     "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
-    "    date_regexp='2024-11-06T',\n",
+    "    date_regexp='2024-11-0',#1-06T',\n",
     "    data_dir='/media/photoDS216/crypto/',\n",
     "    every=\"1000ms\",\n",
     ")\n",
     "shaper_config = ShaperConfig(\n",
     "    only_full_arrays=True,\n",
     "    zoom_frac = 0.002,\n",
-    "    num_side_lvl = 4,\n",
-    "    look_ahead = 8,\n",
+    "    num_side_lvl = 8,\n",
+    "    look_ahead = 32,\n",
     "    look_ahead_side_bips = 10,\n",
     "    look_ahead_side_width = 4,\n",
     "    rolling_window_size = 1024,\n",
+    "    window_stride = 8,\n",
     ")\n",
-    "test_config = replay_config.but(date_regexp='2024-11-07T01')\n",
+    "test_config = replay_config.but(date_regexp='2024-11-0')\n",
     "\n",
     "# Define your asynchronous function to update the figure\n",
     "async def online_learning(train_config, replay_config, shaper_config):\n",
