--- a/replay.ipynb
+++ b/replay.ipynb
@@ -18,13 +18,14 @@
     "    every=\"1000ms\",\n",
     ")\n",
     "shaper_config = ShaperConfig(\n",
-    "    only_full_arrays=False,\n",
+    "    only_full_arrays=True,\n",
     "    zoom_frac = 0.002,\n",
     "    num_side_lvl = 8,\n",
     "    look_ahead = 32,\n",
     "    look_ahead_side_bips = 10,\n",
     "    look_ahead_side_width = 4,\n",
-    "    rolling_window_size = 256,\n",
+    "    rolling_window_size = 1024,\n",
+    "    window_stride = 8,\n",
     ")\n",
     "\n",
     "vis = Visualizer()\n",
@@ -34,7 +35,7 @@
     "        shaper_config=shaper_config, #.but(zoom_frac=0.0004, look_ahead_side_bips=1)\n",
     "    ):\n",
     "        pass\n",
-    "        # vis.update(books_z_data=books_array, level_reach_z_data=t2l_array, bidask=pxar)\n",
+    "        vis.update(books_z_data=books_array, level_reach_z_data=t2l_array, bidask=pxar)\n",
     "\n",
     "await rolling_plot(config=replay_conf.but(\n",
     "        # max_samples=1000, \n",
