many imprevements. cache being used in training. very fast

--- a/dev_replay.ipynb
+++ b/dev_replay.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "shaper_config = ShaperConfig(\n",
     "    only_full_arrays=False,\n",
-    "    zoom_frac = 0.0005,\n",
+    "    view_bips = 5,\n",
     "    look_ahead_side_bips = 2,\n",
     ")\n",
     "\n",
@@ -120,7 +120,7 @@
     "async def rolling_plot(config: ReplayConfig):\n",
     "    async for books_array, t2l_array, pxar in iter_shapes_t2l(\n",
     "        replay_config=config.but(every=\"200ms\"),\n",
-    "        shaper_config=shaper_config.but(zoom_frac=0.0004, look_ahead_side_bips=1)\n",
+    "        shaper_config=shaper_config.but(view_bips=4, look_ahead_side_bips=1)\n",
     "    ):\n",
     "        vis.update(books_z_data=books_array, level_reach_z_data=t2l_array, bidask=pxar)\n",
     "\n",
