--- a/live.ipynb
+++ b/live.ipynb
@@ -23,7 +23,7 @@
     ")\n",
     "shaper_config = ShaperConfig(\n",
     "    only_full_arrays=False,\n",
-    "    zoom_frac = 0.002,\n",
+    "    view_bips = 20,\n",
     "    num_side_lvl = 8,\n",
     "    look_ahead_side_bips = 10,\n",
     "    look_ahead_side_width = 4,\n",
