--- a/replay.ipynb
+++ b/replay.ipynb
@@ -19,7 +19,7 @@
     ")\n",
     "shaper_config = ShaperConfig(\n",
     "    only_full_arrays=True,\n",
-    "    zoom_frac = 0.002,\n",
+    "    view_bips = 20,\n",
     "    num_side_lvl = 8,\n",
     "    look_ahead = 32,\n",
     "    look_ahead_side_bips = 10,\n",
@@ -32,7 +32,7 @@
     "async def rolling_plot(config: ReplayConfig):\n",
     "    async for books_array, t2l_array, pxar in iter_shapes_t2l(\n",
     "        replay_config=config, #.but(every=\"200ms\"),\n",
-    "        shaper_config=shaper_config, #.but(zoom_frac=0.0004, look_ahead_side_bips=1)\n",
+    "        shaper_config=shaper_config, #.but(view_bips=4, look_ahead_side_bips=1)\n",
     "    ):\n",
     "        pass\n",
     "        vis.update(books_z_data=books_array, level_reach_z_data=t2l_array, bidask=pxar)\n",
