--- a/learn.ipynb
+++ b/learn.ipynb
@@ -40,17 +40,28 @@
     "test_config = replay_config.but(\n",
     "    date_regexp='2024-11-1*',\n",
     "    randomize=False\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "vis = Visualizer()\n",
     "async def online_learning(train_config, replay_config, shaper_config):\n",
-    "    async for books_arr, t2l, pxar, prediction, loss in train_and_predict(config=train_config, replay_config=replay_config, shaper_config=shaper_config, test_config=test_config,):\n",
+    "    async for books_arr, t2l, pxar, prediction, train_loss, test_loss in train_and_predict(\n",
+    "        config=train_config, \n",
+    "        replay_config=replay_config, \n",
+    "        shaper_config=shaper_config, \n",
+    "        test_config=test_config,\n",
+    "    ):\n",
     "        pred_t2l = prediction.reshape(t2l.shape).transpose(1, 0, 2)\n",
     "        pred_t2l = np.clip(pred_t2l[:, :, 0], -1, 1)\n",
     "\n",
-    "        vis.add_loss(loss)\n",
+    "        vis.add_loss(train_loss, test_loss)\n",
     "        vis.update(books_z_data=books_arr, level_reach_z_data=t2l, bidask=pxar, pred_t2l=pred_t2l)\n",
-    "\n",
     "await online_learning(train_config=train_config, replay_config=replay_config, shaper_config=shaper_config)"
    ]
   },
