visu: improve PnL visualization - Rename subplot title, change predicted PnL color to red, fix axis config

--- a/learn.ipynb
+++ b/learn.ipynb
@@ -7,11 +7,10 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
     "from deep_orderbook.learn.test_learn import train_and_predict\n",
     "from deep_orderbook.visu import Visualizer\n",
     "from deep_orderbook.config import TrainConfig, ReplayConfig, ShaperConfig\n",
-    "\n",
+    "from deep_orderbook.strategy import Strategy\n",
     "train_config = TrainConfig(\n",
     "    num_workers=5,\n",
     "    batch_size=64,\n",
@@ -50,6 +49,7 @@
    "outputs": [],
    "source": [
     "vis = Visualizer()\n",
+    "strategy = Strategy(side_width=shaper_config.look_ahead_side_width, threshold=0.2)\n",
     "async def online_learning(train_config, replay_config, shaper_config):\n",
     "    async for books_arr, t2l, pxar, prediction, train_loss, test_loss in train_and_predict(\n",
     "        config=train_config, \n",
@@ -60,8 +60,15 @@
     "        pred_t2l = prediction.reshape(t2l.shape).transpose(1, 0, 2)\n",
     "        pred_t2l = np.clip(pred_t2l[:, :, 0], -1, 1)\n",
     "\n",
+    "        # Compute PnL for both ground truth and prediction\n",
+    "        gt_pnl, _ = strategy.compute_pnl(pxar, t2l)\n",
+    "        pred_pnl, _ = strategy.compute_pnl(pxar, pred_t2l.reshape(-1, 2*strategy.side_width, 1))\n",
+    "\n",
     "        vis.add_loss(train_loss, test_loss)\n",
-    "        vis.update(books_z_data=books_arr, level_reach_z_data=t2l, bidask=pxar, pred_t2l=pred_t2l)\n",
+    "        vis.update(\n",
+    "            books_z_data=books_arr, level_reach_z_data=t2l,  bidask=pxar, \n",
+    "            pred_t2l=pred_t2l, gt_pnl=gt_pnl, pred_pnl=pred_pnl\n",
+    "        )\n",
     "await online_learning(train_config=train_config, replay_config=replay_config, shaper_config=shaper_config)"
    ]
   },
