--- a/learn.ipynb
+++ b/learn.ipynb
@@ -16,8 +16,8 @@
     "    batch_size=64,\n",
     "    data_queue_size=1024,\n",
     "    num_levels=8,\n",
-    "    learning_rate=0.0001,\n",
-    "    epochs=100,\n",
+    "    learning_rate=0.001,\n",
+    "    epochs=100, save_checkpoint_batches=10, save_checkpoint_mins=1.0\n",
     ")\n",
     "replay_config = ReplayConfig(\n",
     "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
