--- a/replay.ipynb
+++ b/replay.ipynb
@@ -13,16 +13,16 @@
     "replay_conf = ReplayConfig(\n",
     "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
     "    data_dir='/media/photoDS216/crypto/',\n",
-    "    date_regexp='2024-11-01',\n",
+    "    date_regexp='2024-11-01*',\n",
     "    max_samples=-1,\n",
-    "    every=\"1000ms\",\n",
+    "    every=\"100ms\",\n",
     ")\n",
     "shaper_config = ShaperConfig(\n",
-    "    only_full_arrays=True,\n",
-    "    view_bips = 20,\n",
+    "    only_full_arrays=False,\n",
+    "    view_bips = 5,\n",
     "    num_side_lvl = 8,\n",
     "    look_ahead = 32,\n",
-    "    look_ahead_side_bips = 10,\n",
+    "    look_ahead_side_bips = 5,\n",
     "    look_ahead_side_width = 4,\n",
     "    rolling_window_size = 1024,\n",
     "    window_stride = 8,\n",
