--- a/learn.ipynb
+++ b/learn.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "from deep_orderbook.learn.test_learn import train_and_predict\n",
     "from deep_orderbook.visu import Visualizer\n",
     "from deep_orderbook.config import TrainConfig, ReplayConfig, ShaperConfig\n",
@@ -49,25 +48,22 @@
    "outputs": [],
    "source": [
     "vis = Visualizer()\n",
-    "strategy = Strategy(side_width=shaper_config.look_ahead_side_width, threshold=0.2)\n",
+    "strategy = Strategy(threshold=0.3)\n",
     "async def online_learning(train_config, replay_config, shaper_config):\n",
-    "    async for books_arr, t2l, pxar, prediction, train_loss, test_loss in train_and_predict(\n",
-    "        config=train_config, \n",
-    "        replay_config=replay_config, \n",
-    "        shaper_config=shaper_config, \n",
-    "        test_config=test_config,\n",
+    "    async for books_arr, t2l, pxar, pred_t2l, train_loss, test_loss in train_and_predict(\n",
+    "        resume_from_checkpoint=True,\n",
+    "        config=train_config, replay_config=replay_config, shaper_config=shaper_config, test_config=test_config\n",
     "    ):\n",
-    "        pred_t2l = prediction.reshape(t2l.shape).transpose(1, 0, 2)\n",
-    "        pred_t2l = np.clip(pred_t2l[:, :, 0], -1, 1)\n",
-    "\n",
-    "        # Compute PnL for both ground truth and prediction\n",
-    "        gt_pnl, _ = strategy.compute_pnl(pxar, t2l)\n",
-    "        pred_pnl, _ = strategy.compute_pnl(pxar, pred_t2l.reshape(-1, 2*strategy.side_width, 1))\n",
+    "        gt_pnl, pos, gt_up_prox, gt_down_prox = strategy.compute_pnl(pxar, t2l)\n",
+    "        pred_pnl, pred_pos, pred_up_prox, pred_down_prox = strategy.compute_pnl(pxar, pred_t2l)\n",
     "\n",
     "        vis.add_loss(train_loss, test_loss)\n",
     "        vis.update(\n",
-    "            books_z_data=books_arr, level_reach_z_data=t2l,  bidask=pxar, \n",
-    "            pred_t2l=pred_t2l, gt_pnl=gt_pnl, pred_pnl=pred_pnl\n",
+    "            books_z_data=books_arr, level_reach_z_data=t2l, bidask=pxar, \n",
+    "            pred_t2l=pred_t2l, gt_pnl=gt_pnl, pred_pnl=pred_pnl, \n",
+    "            positions=pos, pred_positions=pred_pos,\n",
+    "            up_proximity=gt_up_prox, down_proximity=gt_down_prox,\n",
+    "            pred_up_proximity=pred_up_prox, pred_down_proximity=pred_down_prox\n",
     "        )\n",
     "await online_learning(train_config=train_config, replay_config=replay_config, shaper_config=shaper_config)"
    ]
@@ -89,7 +85,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -103,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
