better visualization with pn; and signals

--- a/replay.ipynb
+++ b/replay.ipynb
@@ -13,7 +13,7 @@
     "replay_conf = ReplayConfig(\n",
     "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
     "    data_dir='/media/photoDS216/crypto/',\n",
-    "    date_regexp='2024-11-01*',\n",
+    "    date_regexp='2024-11-03T1*',\n",
     "    max_samples=-1,\n",
     "    every=\"100ms\",\n",
     ")\n",
@@ -24,7 +24,7 @@
     "    look_ahead = 32,\n",
     "    look_ahead_side_bips = 5,\n",
     "    look_ahead_side_width = 4,\n",
-    "    rolling_window_size = 1024,\n",
+    "    rolling_window_size = 1024*8,\n",
     "    window_stride = 8,\n",
     ")\n",
     "\n",
