fix plot of trades

--- a/learn-100ms.ipynb
+++ b/learn-100ms.ipynb
@@ -11,11 +11,11 @@
     "from deep_orderbook.config import TrainConfig, ReplayConfig, ShaperConfig\n",
     "from deep_orderbook.strategy import Strategy\n",
     "train_config = TrainConfig(\n",
-    "    num_workers=5,    batch_size=8,    data_queue_size=1024,    num_levels=8,    learning_rate=0.001,    epochs=100, save_checkpoint_batches=10, save_checkpoint_mins=1.0\n",
+    "    num_workers=5,    batch_size=8,    data_queue_size=1024,    num_levels=8,    learning_rate=0.01,    epochs=100, save_checkpoint_batches=10, save_checkpoint_mins=1.0\n",
     ")\n",
     "replay_config = ReplayConfig(\n",
     "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
-    "    date_regexp='2024-11-0[1,2]*',\n",
+    "    date_regexp='2025-01-0[1,2]T01*',\n",
     "    # date_regexp='2024-11-06*',\n",
     "    data_dir='/media/photoDS216/crypto/',\n",
     "    every=\"100ms\",\n",
@@ -27,12 +27,12 @@
     "    look_ahead = 32,\n",
     "    look_ahead_side_bips = 5,\n",
     "    look_ahead_side_width = 4,\n",
-    "    rolling_window_size = 1024*8,\n",
+    "    rolling_window_size = 256+0*1024*8,\n",
     "    window_stride = 8,\n",
     "    randomize=True,\n",
     ")\n",
     "test_config = replay_config.but(\n",
-    "    date_regexp='2024-11-03T1*',\n",
+    "    date_regexp='2025-01-02T01*',\n",
     "    # date_regexp='2024-11-06*',\n",
     "    randomize=False\n",
     ")"
