--- a/learn.ipynb
+++ b/learn.ipynb
@@ -11,17 +11,12 @@
     "from deep_orderbook.config import TrainConfig, ReplayConfig, ShaperConfig\n",
     "from deep_orderbook.strategy import Strategy\n",
     "train_config = TrainConfig(\n",
-    "    num_workers=5,\n",
-    "    batch_size=16,\n",
-    "    data_queue_size=1024,\n",
-    "    num_levels=8,\n",
-    "    learning_rate=0.001,\n",
-    "    epochs=100, save_checkpoint_batches=10, save_checkpoint_mins=1.0\n",
+    "    num_workers=5,    batch_size=16,    data_queue_size=1024,    num_levels=8,    learning_rate=0.001,    epochs=100, save_checkpoint_batches=10, save_checkpoint_mins=1.0\n",
     ")\n",
     "replay_config = ReplayConfig(\n",
     "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
-    "    date_regexp='2024-[0,1][8,9,0,1]*',\n",
-    "    # date_regexp='2024-11-06*',\n",
+    "    # date_regexp='2024-[0,1][8,9,0,1]*',\n",
+    "    date_regexp='2024-11-06T00*',\n",
     "    data_dir='/media/photoDS216/crypto/',\n",
     "    every=\"1000ms\",\n",
     ")\n",
@@ -37,8 +32,8 @@
     "    randomize=True,\n",
     ")\n",
     "test_config = replay_config.but(\n",
-    "    date_regexp='2024-12-0*',\n",
-    "    # date_regexp='2024-11-06*',\n",
+    "    # date_regexp='2024-12-0*',\n",
+    "    date_regexp='2024-11-06T00*',\n",
     "    randomize=False\n",
     ")"
    ]
@@ -50,7 +45,7 @@
    "outputs": [],
    "source": [
     "vis = Visualizer()\n",
-    "strategy = Strategy(threshold=0.2)\n",
+    "strategy = Strategy(threshold=0.5)\n",
     "async def online_learning(train_config, replay_config, shaper_config):\n",
     "    async for books_arr, t2l, pxar, pred_t2l, train_loss, test_loss in train_and_predict(\n",
     "        resume_from_checkpoint=True,\n",
@@ -87,7 +82,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -101,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
