--- a/replay.ipynb
+++ b/replay.ipynb
@@ -14,7 +14,7 @@
     "replay_conf = ReplayConfig(\n",
     "    markets=[\"ETH-USD\"],#, \"BTC-USD\", \"ETH-BTC\"],\n",
     "    data_dir='/media/photoDS216/crypto/',\n",
-    "    date_regexp='2025-02-07T15*',\n",
+    "    date_regexp='2025-02*',\n",
     "    max_samples=-1,\n",
     "    every=\"100ms\",\n",
     ")\n",
